    Win32.

  * Updated nl translation - thanks to Kenny Verstraete

  * Updated cs translation - thanks to Marek Černocký

  * Export dialogs now set the default path to CSIDL_COMMON_PICTURES on Win32.
    Thanks to David Stone for pointing out the incorrect path that was previously being used.

  * Poster mode now has gridlines to show the boundaries and overlaps of each page.


PhotoPrint-0.4.1

  * Added cs localization - thanks to Petr Kletecka.  Thanks also to Marek Černocký
	and Frantisek Hanzlik who also supplied Czech localizations.  In the interests
	of fairness I've used the first one I received!

  * Fixed bug whereby the border and background paths are ignored if there's no
	preset file.

  * Fixed default driver bugs for when there's no preset.

  * Added po localization - thanks to Artur Szymanski

  * Borders pack is now part of the main PhotoPrint archive

  * Fixed bug with top margin in Single layout mode.  Hopefully this will now
    *finally* work correctly.

  * Reworked some of the printer subsystem - should fix problems people have been
	experiencing with the -oraw flag, and should also be generally more robust.
    Needs more testing.

  * Fixed bug where dropping a bad file into PhotoPrint caused the current image to
    become unselectable until either page or layout was changed.

  * Refactored much of the threading code.

  * Added Histogram display

  * Expanders now remember their state between sessions

  * Added nl localization - thanks to Lex Wernars.

  * Reworked the SimpleCombo widget for friendlier option definitions.

  * Fixed a deadlock problem with the histogram

  * Print preview dialog implemented at last.  This is done as a full-screen window
    with auto-hiding control-panel.  The reason for this is that when evaluating
    colours, especially in print simulation mode, UI elements can throw off your
    perception of colour.

  * Updated cs translation - thanks to Marek Černocký.
