@@ -24,6 +24,8 @@ PhotoPrint-0.4.2
 
   * Poster mode now has gridlines to show the boundaries and overlaps of each page.
 
+  * Now has Gamma effect.
+
 
 PhotoPrint-0.4.1
 
